[metadata]
name = fiximports
author = Gaetan Semet
author-email = gaetan@xeberon.net
summary = Reorder import statements in Python files
description-file =
    README.rst
home-page = https://github.com/Stibbons/fiximports
requires-python = >=2.6
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    codesstyle

[files]
packages =
    fiximports
data_files =
    share/fiximports/docs = doc/*

[entry_points]
console_scripts =
    fiximports = fiximports.fiximports:main

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
warnerrors = True

[aliases]
docs = build_sphinx

[wheel]
universal = 1

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[build_sphinx]
# Options for Sphinx build
source_dir = doc/source
build_dir = doc/build


[devpi:upload]
# Options for the devpi: PyPI serer and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
format = bdist_wheel
